--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-bitcask",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "description": "An append only, on-disc log database for storing and retrieving logs fast using in memory hashmaps.",
   "main": "index.js",
   "scripts": {
