--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-bitcask",
-  "version": "1.0.0-beta.2",
-  "description": "An append only, on-disc log database for storing and retrieving logs fast using in memory hashmaps.",
+  "version": "1.0.0-beta.3",
+  "description": "An append only, on-disk log database for storing and retrieving logs fast using in memory hashmaps.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
