--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "node-bitcask",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.4",
   "description": "An append only, on-disk log database for storing and retrieving logs fast using in memory hashmaps.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [
     "bitcask",
